# Treadle

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  JobSystem.sln  ReadMe.md  ToDo.md  Treadle.slnx  TreadleConfig.cmake
Benchmarks/: BenchmarkResults.txt  Benchmarks.vcxproj  Benchmarks.vcxproj.filters  main.cpp
BuildingBlocks/: BuildingBlocks.vcxproj  BuildingBlocks.vcxproj.filters  LinuxDef.h  Macros.h  Thread.hpp  WindowsDef.h  main.cpp
Examples/: JobSystem.vcxproj  JobSystem.vcxproj.filters  PrimeNumbers.ixx  main.cpp
FindPrime/: JobSystem.vcxproj  PrimeNumbers.ixx  main.cpp
Treadle/: CMakeLists.txt  CMakePresets.json  JobQueue.cpp  JobQueue.h  JobQueue.ixx  JobSystem.cpp  JobSystem.h  JobSystem.ixx  Locks.cpp  Locks.h  OsIncludes.h  Readme.md  Treadle.vcxproj  Treadle.vcxproj.filters  WorkJob.cpp  WorkJob.h  WorkJob.ixx  WorkStealingQueue.cpp  WorkStealingQueue.h  WorkStealingWorker.h  Worker.cpp  Worker.h  Worker.ixx
Treadle/benchmarks/: CMakeLists.txt  TreadleBenchmark.cpp
Treadle/cmake/: TreadleConfig.cmake
Treadle/src/: BasicPromise.h  CMakeLists.txt  CoroTypes.h  DependedTask.cpp  DependedTask.h  JobSystem.cpp  JobSystem.h  MpmcQueue.hpp  MultiDependantTask.cpp  MultiDependentTask.h  Task.h  Task.hpp  TaskPool.h  TaskTraits.hpp  ThreadSafeMap.hpp  ThreadUtils.h  Wait.hpp  WaitUtils.h
Treadle/tests/: CMakeLists.txt  JobSystemTest.cpp  MultiTaskTest.cpp  TaskTest.cpp  TestUtils.hpp  Treadle2Test.cpp  WaitTest.cpp
Treadle/treadle2/: CMakeLists.txt  CountedTask.hpp  MultiTask.hpp  MultiTaskAwaitable.hpp  Task.hpp  TaskTraits.hpp  Wait.hpp
Turvy/: Locks.ixx  Turvy.vcxproj  Turvy.vcxproj.filters
benchmarks/: TreadleBenchmark.cpp
coroutines/: AtomicCounter.h  DependedTask.cpp  DependedTask.h  DependentTask.h  MultiDependentTask.cpp  MultiDependentTask.h  Task.h  coroutines.cpp  coroutines.vcxproj  coroutines.vcxproj.filters
src/: AtomicCounter.h  CMakeLists.txt  JobSystem.cpp  OsDef.h  Wait.hpp  WaitUtils.cpp
src/include/Treadle/private/: WaitUtils.h
src/include/Treadle/public/: IScheduler.h  Job.h  JobSystem.h  MpmcQueue.hpp  Task.hpp  TaskTraits.hpp  Wait.hpp
tests/: JobSystemTest.cpp  TaskTest.cpp  TestUtils.hpp  WaitTest.cpp
